[tool.poetry]
name = "borderlands-science"
version = "0.1.0"
description = "Player engagement analysis for Borderlands Science."
readme = "README.md"
authors = [{name = "galaxyhikes", email = "hazel_jiajue@hotmail.com"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
numpy = "^1.26"
scipy = "^1.11"
statsmodels = "^0.14"
scikit-learn = "^1.3"
lifelines = "^0.27"
matplotlib = "^3.8"
seaborn = "^0.13"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
